[package]
name = "starknet_json_rpc_api"
version = "0.1.0"
edition = "2021"

[dependencies]
starknet-core = "0.11.1"
starknet-crypto = "0.7.1"
starknet-macros = "0.2.0"
starknet-providers = "0.11.0"
starknet-signers = "0.10.0"
tokio = { version = "1.40.0", features = ["full"] }
thiserror = "1.0.56"
hex = "0.4"
serde_json = "1.0"
bs58 = "0.5.1"
serde = "1.0.211"
